# move-fmt

./: Cargo.toml  README.md  Readme.md  rustfmt.toml
.github/workflows/: rust.yml
src/: error.rs  formatter.rs  grammar.pest  grammar.rs  lib.rs  main.rs  pre_build.rs  utils.rs
tests/: td.move  td.mvir  test.rs
